# rust-gkat

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  test.txt
.github/workflows/: rust.yml
benchmark/: results.md
benchmark/degenerate/: exp01.txt  exp03.txt
benchmark/e1000b10p100eq/: exp00.txt  exp02.txt  exp03.txt  exp06.txt  exp07.txt  exp08.txt  exp14.txt  exp16.txt  exp19.txt  exp20.txt  exp21.txt  exp22.txt  exp24.txt  exp25.txt  exp26.txt  exp28.txt  exp29.txt  exp30.txt  exp34.txt  exp35.txt  exp37.txt  exp40.txt  exp41.txt  exp42.txt  exp44.txt  exp47.txt
benchmark/e1000b10p100equal/: exp01.txt  exp04.txt  exp05.txt  exp09.txt  exp10.txt  exp11.txt  exp12.txt  exp13.txt  exp15.txt  exp17.txt  exp18.txt  exp23.txt  exp27.txt  exp31.txt  exp32.txt  exp33.txt  exp36.txt  exp38.txt  exp39.txt  exp43.txt  exp45.txt  exp46.txt  exp48.txt  exp49.txt
benchmark/e1000b10p100ne/: exp02.txt  exp03.txt  exp04.txt  exp07.txt  exp10.txt  exp13.txt  exp14.txt  exp16.txt  exp17.txt  exp24.txt  exp28.txt  exp34.txt  exp35.txt  exp37.txt  exp44.txt
benchmark/e1000b10p100rand/: exp00.txt  exp08.txt  exp09.txt  exp11.txt  exp18.txt  exp20.txt  exp22.txt  exp23.txt  exp27.txt  exp29.txt  exp30.txt  exp32.txt  exp33.txt  exp38.txt  exp39.txt  exp40.txt  exp41.txt  exp42.txt  exp43.txt  exp45.txt  exp46.txt  exp47.txt  exp48.txt
benchmark/e1000b10p100rd/: exp01.txt  exp05.txt  exp06.txt  exp12.txt  exp15.txt  exp19.txt  exp21.txt  exp25.txt  exp26.txt  exp31.txt  exp36.txt  exp49.txt
benchmark/e2000b20p200eq/: exp01.txt  exp03.txt  exp06.txt  exp08.txt  exp09.txt  exp10.txt  exp12.txt  exp14.txt  exp15.txt  exp16.txt  exp17.txt  exp18.txt  exp19.txt  exp20.txt  exp21.txt  exp23.txt  exp25.txt  exp26.txt  exp27.txt  exp28.txt  exp30.txt  exp31.txt  exp33.txt  exp35.txt  exp38.txt  exp41.txt  exp43.txt  exp44.txt  exp46.txt  exp47.txt  exp48.txt
benchmark/e2000b20p200equal/: exp00.txt  exp02.txt  exp04.txt  exp05.txt  exp07.txt  exp11.txt  exp13.txt  exp22.txt  exp24.txt  exp29.txt  exp32.txt  exp34.txt  exp36.txt  exp37.txt  exp39.txt  exp40.txt  exp42.txt  exp45.txt  exp49.txt
benchmark/e2000b20p200ne/: exp00.txt  exp02.txt  (+17 more)
examples/: complex.txt  exp00.txt  exp00_0.txt  exp00_1.txt  exp01.txt
input/: test00.txt  test01.txt  test02.txt  test03.txt  test04.txt  test05.txt  test06.txt  test07.txt  test08.txt  test09.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt
src/: bexp.rs  dead_exp.rs  gkat_symb.rs  main.rs  prog.rs  spec.lalrpop
web_wasm/: Cargo.toml  IMPROVEMENTS.md  README.md  index.html  server.js  start.sh  styles.css  test.sh  wasm-pack.toml
web_wasm/examples/: simple.txt
web_wasm/src/: lib.rs  main.rs  spec.lalrpop  spec.rs  tests.rs
web_wasm/src/kernel1/: derivative.rs  solver.rs
web_wasm/src/kernel2/: automaton.rs  mod.rs  solver.rs
web_wasm/src/parsing/: custom_parser.rs  mod.rs
web_wasm/src/syntax/: gkat.rs  gkat_pure_bdd.rs  mod.rs
web_wasm/tests/: bdd_tests.rs
(+396 files in other folders)
