[package]
name = "rust-gkat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
overflow-checks = true
debug = true

[profile.test]
overflow-checks = true
debug = true

[profile.release]
overflow-checks = false
opt-level = 3
# lto = "fat"
# codegen-units = 1
panic = "abort"
debug = true

[build-dependencies]
lalrpop = "0.21.0"

[dependencies]
mimalloc = { version = "0.1.43", default-features = false }
recursive = "0.1.1"
gxhash = "3.4.1"
hashconsing = "1.6.0"
disjoint-sets = "0.4.2"
cudd-sys = "1.0.0"
logicng = "0.1.0-alpha.3"
splr = { version = "0.17.2", features = ["incremental_solver"] }
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
clap = { version = "4.5.18", features = ["derive"] }
cadical-sys = "0.3.0"
