[package]
name = "rust-gkat-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
overflow-checks = true
debug = true

[profile.test]
overflow-checks = true
debug = true

[profile.release]
overflow-checks = false
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[build-dependencies]
lalrpop = "0.21.0"

[dependencies]
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
clap = { version = "4.5.18", features = ["derive"] }
wasm-bindgen = "0.2.92"
disjoint-sets = "0.4.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"